--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@vueuse/core": "^14.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "highlight.js": "11.11.1",
     "lucide-vue-next": "^0.555.0",
     "reka-ui": "^2.6.1",
     "tailwind-merge": "^3.4.0",
