--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -30,6 +30,7 @@ nvml-wrapper = "0.9"
 reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
 zip = { version = "0.6", default-features = false, features = ["deflate"] }
 base64 = "0.22.1"
+once_cell = "1"
 
 [target.'cfg(windows)'.dependencies]
 windows = { version = "0.58", features = [
