--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "highlight.js": "11.11.1",
+    "echarts": "^6.0.0",
+    "vue-echarts": "^8.0.1",
     "lucide-vue-next": "^0.555.0",
     "reka-ui": "^2.6.1",
     "tailwind-merge": "^3.4.0",
