--- a/package.json
+++ b/package.json
@@ -18,17 +18,20 @@
     "@tauri-apps/plugin-dialog": "^2.4.2",
     "@tauri-apps/plugin-opener": "^2",
     "@vueuse/core": "^14.1.0",
+    "apexcharts": "^5.3.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "highlight.js": "11.11.1",
     "echarts": "^6.0.0",
-    "vue-echarts": "^8.0.1",
+    "gsap": "^3.13.0",
+    "highlight.js": "11.11.1",
     "lucide-vue-next": "^0.555.0",
     "reka-ui": "^2.6.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "vue": "^3.5.13",
-    "vue-i18n": "^11.2.2"
+    "vue-echarts": "^8.0.1",
+    "vue-i18n": "^11.2.2",
+    "vue3-apexcharts": "^1.10.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.17",
