--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -32,13 +32,16 @@ zip = { version = "0.6", default-features = false, features = ["deflate"] }
 base64 = "0.22.1"
 once_cell = "1"
 
+
 [target.'cfg(windows)'.dependencies]
 windows = { version = "0.58", features = [
     "Win32_Foundation",
     "Win32_Security",
     "Win32_System_Threading",
     "Win32_UI_WindowsAndMessaging",
+    "Win32_System_Registry",
 ] }
+everything-sdk = { version = "0.0.6" }
 
 [dev-dependencies]
 tempfile = "3"
