--- a/package.json
+++ b/package.json
@@ -52,5 +52,8 @@
     "vite": "^6.0.3",
     "vitest": "^4.0.15",
     "vue-tsc": "^2.1.10"
+  },
+  "overrides": {
+    "stylus": "^0.64.0"
   }
 }
