--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -31,6 +31,7 @@ reqwest = { version = "0.12", default-features = false, features = ["blocking", 
 zip = { version = "0.6", default-features = false, features = ["deflate"] }
 base64 = "0.22.1"
 once_cell = "1"
+trash = "5"
 
 
 [target.'cfg(windows)'.dependencies]
