feat: improve async refresh and monitor UX
- Warm external tool probing and render 'detecting' state until refreshed\n- Wake metrics sampler on subscribe and avoid missing first snapshot\n- Add real OS uptime to metrics payload\n- Replace uptime progress line with 24-hour transcode activity ring (paused excluded)\n- Persist activity buckets to settings.json with bounded retention\n- Guard drag-drop event listener and gate startup auto-dump to dev/flag\n\nTests: npx vitest --run; npm run build; cargo test; cargo clippy -- -D warnings

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -27,6 +27,7 @@ anyhow = "1"
 thiserror = "1"
 sysinfo = "0.30"
 nvml-wrapper = "0.9"
+chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
 reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
 zip = { version = "0.6", default-features = false, features = ["deflate"] }
 base64 = "0.22.1"
