--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
+    "check:all": "node scripts/check-all.mjs",
     "preview": "vite preview",
     "test": "vitest",
     "test:unit": "vitest",
