--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -35,6 +35,10 @@ base64 = "0.22.1"
 once_cell = "1"
 trash = "5"
 
+[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
+tauri-plugin-process = "2"
+tauri-plugin-updater = "2"
+
 
 [target.'cfg(windows)'.dependencies]
 windows = { version = "0.58", features = [
