--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -51,6 +51,9 @@ windows = { version = "0.58", features = [
     "Win32_UI_WindowsAndMessaging",
     "Win32_System_Registry",
     "Win32_System_JobObjects",
+    "Win32_System_Com",
+    "Win32_Graphics_DirectWrite",
+    "Win32_Globalization",
 ] }
 everything-sdk = { version = "0.0.6" }
 
