--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -34,6 +34,8 @@ zip = { version = "0.6", default-features = false, features = ["deflate"] }
 base64 = "0.22.1"
 once_cell = "1"
 trash = "5"
+regex = "1"
+filetime = "0.2"
 
 [target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
 tauri-plugin-process = "2"
@@ -47,6 +49,8 @@ font-kit = "0.14"
 windows = { version = "0.58", features = [
     "Win32_Foundation",
     "Win32_Security",
+    "Win32_Storage",
+    "Win32_Storage_FileSystem",
     "Win32_System_Threading",
     "Win32_UI_WindowsAndMessaging",
     "Win32_System_Registry",
