--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test:unit": "vitest",
     "docs:screenshots": "node tools/docs-screenshots/capture.mjs",
     "tauri": "tauri",
-    "tauri:dev": "npm run build && tauri dev",
+    "tauri:dev": "vite build && tauri dev",
     "build:exe": "npm run tauri -- build --no-bundle"
   },
   "dependencies": {
