--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -29,8 +29,8 @@ fs2 = "0.4"
 sysinfo = "0.30"
 nvml-wrapper = "0.9"
 chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
-reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
-zip = { version = "0.6", default-features = false, features = ["deflate"] }
+reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
+zip = { version = "4.6.1", default-features = false, features = ["deflate"] }
 base64 = "0.22.1"
 once_cell = "1"
 trash = "5"
@@ -64,3 +64,12 @@ everything-sdk = { version = "0.0.6" }
 
 [dev-dependencies]
 tempfile = "3"
+
+[profile.release]
+opt-level = "z"
+lto = true
+codegen-units = 1
+panic = "abort"
+strip = true
+debug = 0
+incremental = false
