--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "test:watch": "vitest",
     "test:unit": "vitest run",
     "docs:screenshots": "node tools/docs-screenshots/capture.mjs",
+    "verify:job-compare": "node tools/docs-screenshots/capture-job-compare-verification.mjs",
+    "verify:community-links": "node tools/docs-screenshots/capture-community-links-verification.mjs",
     "tauri": "tauri",
     "tauri:dev": "vite build && tauri dev",
     "build:exe": "npm run tauri -- build --no-bundle"
@@ -20,6 +22,7 @@
     "@tauri-apps/api": "^2.9.1",
     "@tauri-apps/plugin-dialog": "^2.4.2",
     "@tauri-apps/plugin-opener": "^2",
+    "@tauri-apps/plugin-os": "^2.3.2",
     "@tauri-apps/plugin-process": "^2.3.1",
     "@tauri-apps/plugin-updater": "^2.9.0",
     "@vueuse/core": "^14.1.0",
