--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -36,6 +36,7 @@ once_cell = "1"
 trash = "5"
 regex = "1"
 filetime = "0.2"
+tauri-plugin-os = "^2"
 
 [target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
 tauri-plugin-process = "2"
