--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@tauri-apps/plugin-os": "^2.3.2",
     "@tauri-apps/plugin-process": "^2.3.1",
     "@tauri-apps/plugin-updater": "^2.9.0",
+    "@tauri-apps/plugin-window-state": "^2.4.1",
     "@vueuse/core": "^14.1.0",
     "@vueuse/integrations": "^14.1.0",
     "apexcharts": "^5.3.6",
