--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -41,6 +41,7 @@ tauri-plugin-os = "^2"
 [target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
 tauri-plugin-process = "2"
 tauri-plugin-updater = "2"
+tauri-plugin-window-state = "2.0.0"
 
 [target.'cfg(all(not(windows), not(any(target_os = "android", target_os = "ios"))))'.dependencies]
 font-kit = "0.14"
