--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "verify:job-compare": "node tools/docs-screenshots/capture-job-compare-verification.mjs",
     "verify:batch-detail-context-menu": "node tools/docs-screenshots/capture-batch-detail-context-menu-verification.mjs",
     "verify:community-links": "node tools/docs-screenshots/capture-community-links-verification.mjs",
+    "verify:empty-queue-badge": "node tools/docs-screenshots/capture-empty-queue-badge-verification.mjs",
     "verify:preset-open-panel": "node tools/docs-screenshots/capture-preset-open-panel-verification.mjs",
+    "verify:preview-inflight-source-safety": "node tools/docs-screenshots/capture-preview-inflight-source-safety.mjs",
     "verify:settings-taskbar-progress-locale-refresh": "node tools/docs-screenshots/capture-settings-taskbar-progress-locale-refresh-verification.mjs",
+    "verify:window-state-startup": "node tools/docs-screenshots/capture-window-state-startup-verification.mjs",
     "tauri": "tauri",
     "tauri:dev": "vite build && tauri dev",
     "build:exe": "npm run tauri -- build --no-bundle",
