feat: add configurable data root + config bundle
Add a data-root layer (system vs portable) and migrate legacy sidecar files into it.

Expose Tauri commands + settings UI to switch mode, open data dir, export/import config bundle, and clear app-managed data.

Import validates schema/tool paths and rolls back engine state on failure; engine is initialized after data root setup.

Add frontend + Rust tests and extend check-all/i18n tooling (plus a WSL rust test helper).

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "check:all": "node scripts/check-all.mjs",
+    "check:i18n": "node scripts/check-i18n.mjs",
     "preview": "vite preview",
     "test": "vitest run",
     "test:watch": "vitest",
@@ -15,6 +16,7 @@
     "format:check": "prettier --check .",
     "format:staged": "lint-staged",
     "format:rust": "cargo fmt --manifest-path src-tauri/Cargo.toml",
+    "format:rust:check": "cargo fmt --manifest-path src-tauri/Cargo.toml -- --check",
     "format:rust:staged": "node scripts/format-rust-staged.mjs",
     "docs:screenshots": "node tools/docs-screenshots/capture.mjs",
     "verify:job-compare": "node tools/docs-screenshots/capture-job-compare-verification.mjs",
