feat: add per-run command/log history
- Track JobRun history in backend jobs and persist terminal logs as run history for crash recovery

- Update task detail dialog to switch command/log by run with correct copy semantics

- Route job log appends through a shared bounded-log helper and include cargo fmt in format scripts

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "test:unit": "vitest run",
-    "format": "prettier --write .",
-    "format:check": "prettier --check .",
+    "format": "prettier --write . && cargo fmt --manifest-path src-tauri/Cargo.toml",
+    "format:check": "prettier --check . && cargo fmt --manifest-path src-tauri/Cargo.toml -- --check",
     "format:staged": "lint-staged",
     "format:rust:staged": "node scripts/format-rust-staged.mjs",
     "docs:screenshots": "node tools/docs-screenshots/capture.mjs",
