--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
+    "version:set": "node scripts/set-version.mjs",
     "check:all": "node scripts/check-all.mjs",
     "check:i18n": "node scripts/check-i18n.mjs",
     "preview": "vite preview",
