--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -37,6 +37,7 @@ trash = "5"
 regex = "1"
 filetime = "0.2"
 tauri-plugin-os = "^2"
+tokio = { version = "1", default-features = false, features = ["fs", "io-util", "rt"] }
 
 [target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
 tauri-plugin-process = "2"
