--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -29,7 +29,7 @@ fs2 = "0.4"
 sysinfo = "0.30"
 nvml-wrapper = "0.9"
 chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
-reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
+reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
 zip = { version = "4.6.1", default-features = false, features = ["deflate"] }
 base64 = "0.22.1"
 once_cell = "1"
