--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "test:unit": "vitest run",
+    "dup:frontend": "jscpd -c .jscpd.frontend.json",
+    "dup:rust": "jscpd -c .jscpd.rust.json",
+    "dup:all": "npm run dup:frontend && npm run dup:rust",
     "format": "prettier --write . && cargo fmt --manifest-path src-tauri/Cargo.toml",
     "format:check": "prettier --check . && cargo fmt --manifest-path src-tauri/Cargo.toml -- --check",
     "format:staged": "lint-staged",
@@ -60,6 +63,7 @@
     "autoprefixer": "^10.4.22",
     "happy-dom": "^20.0.11",
     "husky": "^9.1.7",
+    "jscpd": "^4.0.5",
     "jsdom": "^27.2.0",
     "lint-staged": "^16.2.7",
     "playwright": "^1.55.0",
