chore(checks): update jscpd configs and scripts

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "test:unit": "vitest run",
-    "dup:frontend": "jscpd -c .jscpd.frontend.json",
-    "dup:rust": "jscpd -c .jscpd.rust.json",
+    "dup:frontend": "jscpd -c .jscpd.frontend.json src",
+    "dup:rust": "jscpd -c .jscpd.backend.json src-tauri/src",
     "dup:all": "npm run dup:frontend && npm run dup:rust",
     "format": "prettier --write . && cargo fmt --manifest-path src-tauri/Cargo.toml",
     "format:check": "prettier --check . && cargo fmt --manifest-path src-tauri/Cargo.toml -- --check",
