--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "test:unit": "vitest run",
+    "audit": "pnpm audit --registry=https://registry.npmjs.org",
+    "audit:json": "pnpm audit --json --registry=https://registry.npmjs.org",
     "dup:frontend": "jscpd -c .jscpd.frontend.json src",
     "dup:rust": "jscpd -c .jscpd.backend.json src-tauri/src",
     "dup:all": "jscpd -c .jscpd.frontend.json src && jscpd -c .jscpd.backend.json src-tauri/src",
@@ -32,7 +34,7 @@
   "dependencies": {
     "@tauri-apps/api": "^2.9.1",
     "@tauri-apps/plugin-dialog": "^2.4.2",
-    "@tauri-apps/plugin-opener": "^2",
+    "@tauri-apps/plugin-opener": "^2.5.2",
     "@tauri-apps/plugin-os": "^2.3.2",
     "@tauri-apps/plugin-process": "^2.3.1",
     "@tauri-apps/plugin-updater": "^2.9.0",
@@ -43,30 +45,30 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "echarts": "^6.0.0",
-    "gsap": "^3.13.0",
+    "gsap": "^3.14.2",
     "highlight.js": "11.11.1",
-    "lucide-vue-next": "^0.555.0",
-    "reka-ui": "^2.6.1",
+    "lucide-vue-next": "^0.562.0",
+    "reka-ui": "^2.7.0",
     "sortablejs": "^1.15.6",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "vue": "^3.5.13",
+    "vue": "^3.5.26",
     "vue-echarts": "^8.0.1",
-    "vue-i18n": "^11.2.2",
+    "vue-i18n": "^11.2.7",
     "vue-sonner": "^2.0.9",
     "vue3-apexcharts": "^1.10.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
-    "@tailwindcss/postcss": "^4.1.17",
-    "@tailwindcss/vite": "^4.1.17",
-    "@tauri-apps/cli": "^2",
-    "@types/node": "^24.10.1",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@tailwindcss/vite": "^4.1.18",
+    "@tauri-apps/cli": "^2.9.6",
+    "@types/node": "^25.0.3",
     "@typescript-eslint/eslint-plugin": "^8.50.1",
     "@typescript-eslint/parser": "^8.50.1",
-    "@vitejs/plugin-vue": "^5.2.1",
+    "@vitejs/plugin-vue": "^6.0.3",
     "@vue/test-utils": "^2.4.6",
-    "autoprefixer": "^10.4.22",
+    "autoprefixer": "^10.4.23",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-vue": "^10.6.2",
@@ -74,18 +76,18 @@
     "happy-dom": "^20.0.11",
     "husky": "^9.1.7",
     "jscpd": "^4.0.5",
-    "jsdom": "^27.2.0",
+    "jsdom": "^27.3.0",
     "lint-staged": "^16.2.7",
-    "playwright": "^1.55.0",
+    "playwright": "^1.57.0",
     "postcss": "^8.5.6",
     "prettier": "^3.7.4",
-    "shadcn-vue": "^2.4.0",
-    "tailwindcss": "^4.1.17",
-    "typescript": "~5.6.2",
-    "vite": "^6.0.3",
-    "vitest": "^4.0.15",
+    "shadcn-vue": "^2.4.3",
+    "tailwindcss": "^4.1.18",
+    "typescript": "~5.9.3",
+    "vite": "^7.3.0",
+    "vitest": "^4.0.16",
     "vue-eslint-parser": "^10.2.0",
-    "vue-tsc": "^2.1.10"
+    "vue-tsc": "^3.2.1"
   },
   "overrides": {
     "stylus": "^0.64.0"
