chore(check): ignore rust target artifacts in prettier

--- a/.prettierignore
+++ b/.prettierignore
@@ -4,6 +4,7 @@ node_modules
 target
 target-perf-audit-*
 src-tauri/target
+src-tauri/target*
 src-tauri/target-codex-test
 src-tauri/gen
 perf-traces.local
