--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "sortablejs": "^1.15.6",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "virtua": "^0.48.2",
     "vue": "^3.5.26",
     "vue-echarts": "^8.0.1",
     "vue-i18n": "^11.2.7",
