perf(queue): fix large-queue UI jank with delta sync

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "check:i18n": "node scripts/check-i18n.mjs",
     "preview": "vite preview",
     "test": "vitest run",
+    "bench:queue": "vitest run --config tools/perf/vitest.perf.config.ts",
     "test:watch": "vitest",
     "test:unit": "vitest run",
     "audit": "pnpm audit --registry=https://registry.npmjs.org",
@@ -26,6 +27,7 @@
     "format:staged": "lint-staged --no-stash",
     "format:rust:staged": "node scripts/format-rust-staged.mjs",
     "docs:screenshots": "node tools/docs-screenshots/capture.mjs",
+    "docs:screenshots:queue-large": "node tools/docs-screenshots/capture-queue-large-list-scroll-verification.mjs --jobs 2000 --processing-jobs 2",
     "tauri": "tauri",
     "tauri:dev": "vite build && tauri dev",
     "build:exe": "tauri build --no-bundle",
