--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.2.1"
 description = "A Tauri App"
 authors = ["muyuanjin"]
 edition = "2024"
+default-run = "ffui"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
