--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -69,6 +69,9 @@ everything-sdk = { version = "0.0.6" }
 [dev-dependencies]
 tempfile = "3"
 
+[features]
+bench = []
+
 [profile.release]
 opt-level = "z"
 lto = true
@@ -87,3 +90,13 @@ incremental = false
 name = "ffui_mock_ffmpeg"
 path = "tests/ffui_mock_ffmpeg.rs"
 harness = false
+
+[[bin]]
+name = "bench_queue_restore"
+path = "src/bin/bench_queue_restore.rs"
+required-features = ["bench"]
+
+[[bin]]
+name = "bench_queue_state_lite"
+path = "src/bin/bench_queue_state_lite.rs"
+required-features = ["bench"]
