--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "preview": "vite preview",
     "test": "vitest run",
     "bench:queue": "vitest run --config tools/perf/vitest.perf.config.ts",
+    "bench:queue:browser": "node tools/perf/queue-large-list.browser.perf.mjs",
     "test:watch": "vitest",
     "test:unit": "vitest run",
     "audit": "pnpm audit --registry=https://registry.npmjs.org",
@@ -29,6 +30,7 @@
     "format:rust:staged": "node scripts/format-rust-staged.mjs",
     "docs:screenshots": "node tools/docs-screenshots/capture.mjs",
     "docs:screenshots:queue-large": "node tools/docs-screenshots/capture-queue-large-list-scroll-verification.mjs --jobs 2000 --processing-jobs 2",
+    "docs:screenshots:preview-fallback": "node tools/docs-screenshots/capture-preview-fallback-layout-verification.mjs",
     "tauri": "tauri",
     "tauri:dev": "vite build && tauri dev",
     "build:exe": "tauri build --no-bundle",
