--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -32,6 +32,7 @@ sysinfo = "0.30"
 nvml-wrapper = "0.9"
 chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
 reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "socks"] }
+sha2 = "0.10"
 zip = { version = "4.6.1", default-features = false, features = ["deflate"] }
 base64 = "0.22.1"
 once_cell = "1"
