--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "version:set": "node scripts/set-version.mjs",
-    "check:all": "node scripts/check-all.mjs",
+    "check:all": "node scripts/check-all-coalesce.mjs",
     "check:i18n": "node scripts/check-i18n.mjs",
     "vq:snapshot:rebuild": "node scripts/vq-results/build-quality-snapshot.mjs",
     "preview": "vite preview",
